--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portofoliul meu - [Numele Tău]</title>
+  <title>Portofolio - [Nemet Alexandru Sebastian]</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -55,17 +55,17 @@
 <body>
 
   <header>
-    <h1>Salut! Eu sunt [Numele Tău]</h1>
+    <h1>Hi! I'm  [Alex]</h1>
     <p>Web developer & designer</p>
   </header>
 
   <section>
-    <h2>Despre mine</h2>
-    <p>Sunt pasionat de web design și îmi place să creez site-uri și aplicații care arată bine și funcționează perfect. În acest portofoliu găsești câteva proiecte la care am lucrat.</p>
+    <h2>About me </h2>
+    <p>I am passionate about web design and I love creating websites and applications that look good and work perfectly. In this portfolio you can find some projects I have worked on.</p>
   </section>
 
   <section>
-    <h2>Proiectele mele</h2>
+    <h2>My projects </h2>
 
     <div class="project">
       <h3>Proiect 1: Landing Page</h3>
@@ -74,29 +74,15 @@
       <a href="https://github.com/exemplu/landing-page" target="_blank">Vezi pe GitHub</a>
     </div>
 
-    <div class="project">
-      <h3>Proiect 2: Magazin Online</h3>
-      <p>O pagină de prezentare pentru un mic magazin online.</p>
-      <img src="https://via.placeholder.com/800x400" alt="Magazin Online">
-      <a href="https://github.com/exemplu/magazin-online" target="_blank">Vezi pe GitHub</a>
-    </div>
-
-    <div class="project">
-      <h3>Proiect 3: Blog Personal</h3>
-      <p>Un blog simplu și minimalist pentru articole personale.</p>
-      <img src="https://via.placeholder.com/800x400" alt="Blog Personal">
-      <a href="https://github.com/exemplu/blog-personal" target="_blank">Vezi pe GitHub</a>
-    </div>
   </section>
 
   <section>
     <h2>Contact</h2>
-    <p>Email: exemplu@email.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com" target="_blank">Profilul meu</a></p>
+    <p>Email: alexnemet4019@gmail.com</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 [Numele Tău]. Toate drepturile rezervate.</p>
+    <p>[Nemet Alexandru Sebastian]. Toate drepturile rezervate 2025.</p>
   </footer>
 
 </body>
