--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="project">
       <h3>Proiect 1: Landing Page</h3>
       <p>Un landing page modern pentru un startup.</p>
-      <img src="https://via.placeholder.com/800x400" alt="Landing Page">
+      <img src="Test/800x400" alt="Landing Page">
       <a href="https://github.com/exemplu/landing-page" target="_blank">Vezi pe GitHub</a>
     </div>
 
