--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <header>
     <h1>Hi! I'm  [Alex]</h1>
     <p>Web developer & designer</p>
+     <img src="Test/800x400"
   </header>
 
   <section>
