--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 </head>
 <body>
 
-  <header>
-    <h1>Hi! I'm  [Alex]</h1>
-    <p>Web developer & designer</p>
-     <img src="Test/800x400"
-  </header>
+ <header>
+  <h1>Hi! I'm  [Alex]</h1>
+  <p>Web developer & designer</p>
+  <img src="Test/800x400.jpg" alt="Header Image" style="width:100%; max-width:800px; border-radius:10px;">
+</header>
 
   <section>
     <h2>About me </h2>
